--- a/src/index.scss
+++ b/src/index.scss
@@ -1,3 +1,5 @@
+@import 'normalize.css/opinionated.css';
+@import './Shared/assets/styles/index.scss';
 body {
   margin: 0;
   font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
