--- a/src/index.scss
+++ b/src/index.scss
@@ -1,5 +1,8 @@
-@import 'normalize.css/opinionated.css';
+@import-normalize;
 @import './Shared/assets/styles/index.scss';
+* {
+  box-sizing: border-box;
+}
 body {
   margin: 0;
   font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
