--- a/src/Shared/ui/HeadersPage/HeadersPage.module.scss
+++ b/src/Shared/ui/HeadersPage/HeadersPage.module.scss
@@ -1,4 +1,5 @@
 .HeaderPage {
+  background-color: $White;
   width: 100%;
   height: 80px;
   display: flex;
@@ -19,5 +20,14 @@
     color: $Red;
     font-size: 14px;
     font-weight: 500;
+  }
+  .HeaderPage_controls {
+    display: flex;
+    align-items: center;
+    gap: 10px;
+    img {
+      width: 20px;
+      cursor: pointer;
+    }
   }
 }
