--- a/src/Pages/main/pages/Team-page-edit/TeamEditPage.module.scss
+++ b/src/Pages/main/pages/Team-page-edit/TeamEditPage.module.scss
@@ -2,6 +2,7 @@
   display: flex;
   flex-direction: column;
   background-color: $White;
+
   .TeamAdd {
     display: flex;
     flex-direction: column;
@@ -11,7 +12,6 @@
     display: flex;
     gap: 125px;
     padding: 70px 74px;
-
     &_form {
       width: 100%;
       display: flex;
@@ -24,10 +24,44 @@
       display: flex;
       flex-direction: row;
       gap: 30px;
+      width: 100%;
     }
   }
   .link {
     color: inherit;
     text-decoration: none;
+  }
+}
+
+@media (max-width: 1115px) {
+  .teamEdit-page {
+    flex-direction: column;
+    align-items: center;
+  }
+  .teamEdit-img {
+    width: 185px;
+    min-height: 144px;
+  }
+  .teamEdit-page_form {
+    padding: 20px 24px;
+  }
+}
+
+@media (max-width: 768px) {
+  .teamEdit-page {
+    padding: 25px 74px;
+  }
+  .link {
+    width: 50%;
+  }
+  .teamEdit-page_form {
+    padding: 0 25px;
+  }
+
+  .teamEdit-submit {
+    width: 100% !important;
+  }
+  .form-input {
+    padding: 0 25px;
   }
 }
