--- a/src/Shared/ui/ItemCard/ItemCard.module.scss
+++ b/src/Shared/ui/ItemCard/ItemCard.module.scss
@@ -13,22 +13,14 @@
     align-items: center;
     flex-grow: 1;
   }
-  &-image {
+  &-image-container {
     display: flex;
-    justify-content: center;
     align-items: center;
-    width: 100%;
     height: 100%;
-    max-width: 100%;
-    max-height: 100%;
-
-    img {
-      width: 100%;
-      max-height: 100%;
-      height: auto;
-      max-width: 150px;
-      max-height: 150px;
-    }
+  }
+  &-image {
+    max-width: 200px;
+    max-height: 200px;
   }
   &-info {
     display: flex;
@@ -37,11 +29,13 @@
     align-items: center;
     width: 100%;
     gap: 8px;
-    padding: 20px 11px;
+    padding: 20px 20px;
     background-color: $Dark-grey;
     text-align: center;
-    border-bottom-left-radius:10px;
-    border-bottom-right-radius:10px;
+    border-bottom-left-radius: 10px;
+    border-bottom-right-radius: 10px;
+    font-weight: 600;
+    font-size: 16px;
 
     &_title {
       color: $White;
@@ -50,5 +44,25 @@
     &_subtitle {
       color: $Light-grey;
     }
+    .itemCard-info_number {
+      color: $Light-red;
+    }
   }
+  &-info_number {
+    color: $White;
+    font-size: 18px;
+    margin-bottom: 10px;
+  }
+}
+
+@media (max-width: 500px) {
+.itemCard{
+  &-image {
+    max-width: 50px;
+    max-height: 100px;
+  }
+  &-info {
+    padding: 5px 10px;
+  }
+}
 }
