--- a/src/Shared/ui/input/Input.module.scss
+++ b/src/Shared/ui/input/Input.module.scss
@@ -3,13 +3,13 @@
   flex-direction: column;
   justify-content: center;
   cursor: default;
-
+  z-index: 1;
   &_label {
     color: $Grey;
     padding-bottom: $indent1;
   }
   &_block {
-    position: relative; 
+    position: relative;
     input {
       width: 100%;
       height: 40px;
@@ -62,3 +62,5 @@
     margin-top: 2px;
   }
 }
+
+
