--- a/src/Widgets/layout/Components/Header/Header.module.scss
+++ b/src/Widgets/layout/Components/Header/Header.module.scss
@@ -12,9 +12,11 @@
   box-shadow: 0px 1px 10px 0px #d1d1d180;
   background-color: white;
   z-index: 101;
+  &_burger {
+    display: none;
+  }
   &_logo {
     cursor: pointer;
-    
   }
 
   .header_right {
@@ -22,6 +24,25 @@
     justify-content: center;
     align-items: center;
     gap: 8px;
-    
+  }
+}
+
+@media (max-width: 768px) {
+  .header {
+    &_burger {
+      display: flex;
+      align-items: center;
+      width: 24px;
+      height: 24px;
+      cursor: pointer;
+      border: none;
+      background: none;
+    }
+    &_user {
+      display: none;
+    }
+    &_avatar {
+      display: none;
+    }
   }
 }
