--- a/src/Widgets/layout/Layout.module.scss
+++ b/src/Widgets/layout/Layout.module.scss
@@ -1,14 +1,30 @@
 .layout {
-    position: relative;
-    min-height: calc(100vh - 132px);
-    margin: 112px 80px 32px 220px;
-    &_content {
-        height: 100%;
-    }
-    .search-add {
-        display: flex;
-        flex-direction: row;
-        align-items: center;
-        justify-content: space-between;
-    }
+  position: relative;
+  min-height: calc(100vh - 132px);
+  margin: 112px 80px 32px 220px;
+  &_content {
+    height: 100%;
+  }
+  .search-add {
+    display: flex;
+    flex-direction: row;
+    align-items: center;
+    justify-content: space-between;
+  }
+}
+
+@media (max-width: 768px) {
+  .layout {
+    margin: 100px 0 25px;
+    padding: 0 10px;
+  }
+  .sidebar_background {
+    position: fixed;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+    background-color: rgba(0, 0, 0, 0.5);
+    z-index: 2;
+  }
 }
