--- a/src/Shared/ui/select/MultiSelect/MultiSelect.scss
+++ b/src/Shared/ui/select/MultiSelect/MultiSelect.scss
@@ -1,5 +1,5 @@
-.custom-select-container {
-  .custom-select {
+.multi-select-container {
+  .multi-select {
     &__control {
       height: 40px;
       background-color: $White;
