--- a/src/Shared/ui/input/Input.module.scss
+++ b/src/Shared/ui/input/Input.module.scss
@@ -6,7 +6,7 @@
   z-index: 1;
   &_label {
     color: $Grey;
-    padding-bottom: $indent1;
+    padding-bottom: 10px;
   }
   &_block {
     position: relative;
@@ -22,7 +22,7 @@
       background-color: $Lightest-grey-second;
       border: 0.5px solid transparent;
       border-radius: 4px;
-      padding: 0 $indent2;
+      padding: 0 12px;
       transition: 0.1s;
       cursor: text;
 
